--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 android {
-    compileSdkVersion 24
+    compileSdkVersion 23
     buildToolsVersion "24.0.1"
 
     defaultConfig {
@@ -29,4 +29,5 @@ dependencies {
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
     compile 'com.jude:easyrecyclerview:4.0.6'
     compile project(':android-gif-drawable-1.1.17')
+    compile 'org.jsoup:jsoup:1.9.2'
 }
